# link_shortener

./: .air.toml  .dockerignore  .gitignore  .pdm.toml  Dockerfile  Pipfile  README.md  app.db  database.py  demo.db  docker-compose.yaml  go.mod  main.py  pyproject.toml  requirements.txt  server.go  uno.config.js
app/: __main__.py  api.py  app.py  database.py  models.py
app/templates/: base.html  home.html  show.html
client/: package.json  pnpm-lock.yaml
client/src/: api.ts  app.html  models.ts
client/src/routes/: +layout.ts  +page.svelte
client/src/routes/[id]/: +layout.ts  +page.svelte
client/src/routes/[id]/show/: +page.svelte
models/: link.go  models.go
routes/: link.go
server/: .gitignore  build.sh  docker-compose.yaml  go.mod  go.sum  main.go
server/.embedded/client/: index.html
server/.embedded/client/_app/: version.json
server/.embedded/client/_app/immutable/: start-8a520dde.js
server/.embedded/client/_app/immutable/assets/: _layout-c62f97da.css
server/.embedded/client/_app/immutable/chunks/: 0-1831d1be.js  1-a2c8b7eb.js  2-ea07cb72.js  3-42d89d18.js  4-cbc2db3e.js  5-15ced582.js  _layout-5ef87634.js  _layout-fa8548b2.js  api-5cf47720.js  index-1ece4b06.js  index-972b4d80.js  singletons-36868f79.js
server/.embedded/client/_app/immutable/components/: error.svelte-37188195.js  layout.svelte-f43c5a05.js
server/data/database/: links.db
server/models/: links.go  main.go
server/routes/: links.go
templates/: templates.go
templates/www/: base.html  create.html  view.html
views/: index.tpl
(+5 files in other folders)
