[tool.poetry]
name = "link_shortner"
version = "0.1.0"
description = ""
authors = ["apaudel96 <apaudel96@ymail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
bottle = "^0.12.21"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pylama = "^8.3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
